# Mooncake

./: .clang-tidy  CMakeLists.txt  Makefile
.github/workflows/: ci.yml  release.yaml
mooncake-integration/store/: store_py.cpp  store_py.h
mooncake-store/: CMakeLists.txt
mooncake-store/bench/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h  design.md  kv_engine.h  mooncake_engine.cpp  mooncake_engine.h  redis_engine.cpp  redis_engine.h  redis_message_queue.cpp  redis_message_queue.h  run_benchmark.sh  run_experiments.py  worker.cpp
mooncake-store/bench/results/: backup.csv  benchmark_results.csv  vis.py
mooncake-store/benchmarks/: CMakeLists.txt  store_batch_bench.cpp
mooncake-store/include/: client.h  master_client.h  master_service.h  object_metadata.h  pybind_client.h  rpc_service.h  transfer_task.h  types.h
mooncake-store/src/: CMakeLists.txt  allocator.cpp  client.cpp  lmcache_notifier.cpp  master.cpp  master_client.cpp  master_service.cpp  pybind_client.cpp  rpc_service.cpp  transfer_task.cpp
mooncake-store/tests/: CMakeLists.txt  client_integration_test.cpp  lmcache_controller_msg_test.cpp  stress_workload_test.cpp
mooncake-transfer-engine/src/transport/rdma_transport/: endpoint_store.cpp  worker_pool.cpp
mooncake-wheel/: pyproject.toml  setup.py
mooncake-wheel/tests/: test_distributed_object_store.py
scripts/: build_wheel.sh  format.py  run-clang-tidy.py
